Added support for Mysql Integration

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
             <artifactId>aws-java-sdk</artifactId>
             <version>1.11.438</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
