--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 management.endpoints.web.exposure.exclude=loggers
+
+server.port=8080
